fix: improve code readability

--- a/src/components/shared/DevfolioBtn.css
+++ b/src/components/shared/DevfolioBtn.css
@@ -51,11 +51,19 @@ button:after {
 button.clicked {
   display: none !important;
 }
+@media (max-width: 1024px) {
+  button {
+    font-size: 15px;
+    padding: 20px 60px;
+    box-shadow: #c48dff 1px 1px, #ff8cd9 2px 2px, #35e1ff 3px 3px;
+    border-radius: 10px;
+  }
+}
 
 @media (max-width: 768px) {
   button {
     font-size: 15px;
-    padding: 15px 40px;
+    padding: 16px 52px;
     box-shadow: #c48dff 1px 1px, #ff8cd9 2px 2px, #35e1ff 3px 3px;
     border-radius: 10px;
   }
